Add role-based security to TeaVM Errai PoC

--- a/teavm-errai-poc/teavm-errai-app/src/main/java/com/example/LoginPage.html
+++ b/teavm-errai-poc/teavm-errai-app/src/main/java/com/example/LoginPage.html
@@ -1,4 +1,5 @@
 <div>
     <h1>Login Page</h1>
-    <button data-field="loginBtn">Login</button>
+    <button data-field="loginBtn">Login as User</button>
+    <button data-field="adminLoginBtn">Login as Admin</button>
 </div>
